--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="yello">#EEDC82</color>
+
+    <color name="grey">#A9A9A9</color>
+    <color name="green">#9ACD32</color>
+
+    <color name="red">#FF0000</color>
+    <color name="black">#030303</color>
 </resources>
